--- a/Python IDE/Base.lproj/Main.storyboard
+++ b/Python IDE/Base.lproj/Main.storyboard
@@ -37,6 +37,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Python IDE" id="1Uy-id-0bB">
+                        <barButtonItem key="backBarButtonItem" title="Editor" id="J7o-IP-fqS"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="play" id="trY-8o-hSA">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
