--- a/Python IDE/Base.lproj/Main.storyboard
+++ b/Python IDE/Base.lproj/Main.storyboard
@@ -38,6 +38,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="Python IDE" id="1Uy-id-0bB">
                         <barButtonItem key="backBarButtonItem" title="Editor" id="J7o-IP-fqS"/>
+                        <barButtonItem key="leftBarButtonItem" title="Export" id="kpZ-eJ-h7s">
+                            <connections>
+                                <action selector="exportFile:" destination="BYZ-38-t0r" id="d2F-yx-abI"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="play" id="trY-8o-hSA">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
