--- a/Python IDE/Base.lproj/LaunchScreen.storyboard
+++ b/Python IDE/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9527.1" systemVersion="15C48a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9525.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,19 +16,19 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="THh-LB-8go">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchView" translatesAutoresizingMaskIntoConstraints="NO" id="P5k-nZ-cmt">
+                                <rect key="frame" x="20" y="52" width="374" height="810"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.011764705882352941" green="0.50196078431372548" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="THh-LB-8go" secondAttribute="trailing" id="0yN-hO-jea"/>
-                            <constraint firstItem="THh-LB-8go" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="AAS-AC-PhT"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="THh-LB-8go" secondAttribute="bottom" id="Uiu-1z-Kxl"/>
-                            <constraint firstItem="THh-LB-8go" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="mWH-D2-jyD"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="P5k-nZ-cmt" secondAttribute="trailing" id="3oO-cd-Tdw"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="P5k-nZ-cmt" secondAttribute="bottom" id="964-s2-VwE"/>
+                            <constraint firstItem="P5k-nZ-cmt" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" symbolic="YES" id="aWB-K6-tRV"/>
+                            <constraint firstItem="P5k-nZ-cmt" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="hG2-0x-jXC"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -36,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Launch" width="3000" height="3000"/>
+        <image name="LaunchView" width="1024" height="1024"/>
     </resources>
 </document>
